--- a/server/public/index.html
+++ b/server/public/index.html
@@ -32,7 +32,7 @@
 
         <h1 class="deliveryHeader">Delivery Schedule</h1>
 
-        <!-- Displays this message when either Saturday or Sunday -->
+        <!-- Displays this message when current day is Saturday or Sunday -->
         <h1 class="noDeliveries" ng-if="vm.currentDay === 'Sunday' || vm.currentDay === 'Saturday'">
             Oops! We do not delivery on weekends. Please check back with us on Monday!
         </h1>
