--- a/server/public/index.html
+++ b/server/public/index.html
@@ -34,13 +34,13 @@
 
         <!-- Displays this message when current day is Saturday or Sunday -->
         <h1 class="noDeliveries" ng-if="vm.currentDay === 'Sunday' || vm.currentDay === 'Saturday'">
-            Oops! We do not delivery on weekends. Please check back with us on Monday!
+            We do not delivery on weekends. Please check back with us on Monday!
         </h1>
 
         <!-- ng-repeat through allDeliveries array to get buttons for each day -->
         <section class="dayContainer" ng-hide="vm.currentDay === 'Sunday' || vm.currentDay === 'Saturday'">
             <div ng-repeat="days in vm.allDeliveries">
-                <md-button class="md-raised" ng-click="vm.deliverySchedule(days.day, vm.allDeliveries)">
+                <md-button ng-class="{ 'dayBtn': vm.currentDay === days.day }" class="md-raised newDayBtn" ng-click="vm.deliverySchedule(days.day, vm.allDeliveries)">
                     {{days.day}}
                 </md-button>
             </div>
@@ -48,7 +48,7 @@
 
         <!-- ng-repeat through deliveriesPerDay to get the restaurants and their information -->
         <section class="restaurantContainer" ng-hide="vm.currentDay === 'Sunday' || vm.currentDay === 'Saturday'">
-            
+
             <!-- card to hold each restaurants information -->
             <md-card ng-repeat="info in vm.deliveriesPerDay" class="card" ng-hide="info.day === 'Saturday' || info.day === 'Sunday'">
                 <md-card-title>
