added today to day button list

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -32,23 +32,29 @@
 
         <h1 class="deliveryHeader">Delivery Schedule</h1>
 
-        <!-- Displays this message when current day is Saturday or Sunday -->
-        <h1 class="noDeliveries" ng-if="vm.currentDay === 'Sunday' || vm.currentDay === 'Saturday'">
-            We do not delivery on weekends. Please check back with us on Monday!
-        </h1>
+
 
         <!-- ng-repeat through allDeliveries array to get buttons for each day -->
-        <section class="dayContainer" ng-hide="vm.currentDay === 'Sunday' || vm.currentDay === 'Saturday'">
+        <section class="dayContainer">
             <div ng-repeat="days in vm.allDeliveries">
-                <md-button ng-class="{ 'dayBtn': vm.currentDay === days.day }" class="md-raised newDayBtn" ng-click="vm.deliverySchedule(days.day, vm.allDeliveries)">
+                <md-button ng-class="{ 'dayBtn': vm.currentDay === days.day }" ng-if="vm.currentDay !== days.day" class="md-raised newDayBtn" ng-click="vm.deliverySchedule(days.day, vm.allDeliveries)">
                     {{days.day}}
+                </md-button>
+                <!-- Show "Today's" menu options -->
+                <md-button ng-class="{ 'dayBtn': vm.currentDay === days.day }" ng-if="days.day === vm.currentDay" class="md-raised newDayBtn" ng-click="vm.deliverySchedule(days.day, vm.allDeliveries)">
+                    Today
                 </md-button>
             </div>
         </section>
 
-        <!-- ng-repeat through deliveriesPerDay to get the restaurants and their information -->
-        <section class="restaurantContainer" ng-hide="vm.currentDay === 'Sunday' || vm.currentDay === 'Saturday'">
+        <!-- Displays this message when current day is Saturday or Sunday -->
+        <h1 class="noDeliveries" ng-if="vm.currentDay === 'Sunday' || vm.currentDay === 'Saturday'">
+            We do not delivery on weekends. Feel free to browse our weekday menu. If you 
+            would like to order, please check back with us on Monday!
+        </h1>
 
+        <!-- ng-repeat through deliveriesPerDay to get the restaurants and their information -->
+        <section class="restaurantContainer">
             <!-- card to hold each restaurants information -->
             <md-card ng-repeat="info in vm.deliveriesPerDay" class="card" ng-hide="info.day === 'Saturday' || info.day === 'Sunday'">
                 <md-card-title>
